[Fix] Add gap between slider title and input (#1242)

--- a/vizro-core/src/vizro/static/css/slider.css
+++ b/vizro-core/src/vizro/static/css/slider.css
@@ -98,6 +98,7 @@ input.dash-input:invalid {
   align-items: flex-start;
   display: flex;
   flex-direction: row;
+  gap: 0.5rem;
   justify-content: space-between;
 }
 
